# criugen

./: .gitignore  README.md
criugen/abstractir/: actgraph_build.py  actions_gen.py  consistency.py  p_vmas.py  process_concept.py  resource_handles.py  resource_listener.py
criugen/generator/: gen.py
criugen/model/: loader.py
criugen/pyutils/: func.py
criugen/visualize/: actions_labels.py  gvboost.py
generator/: .gitignore  Digraph.gv  README.md  criugen.py  setup.py
generator/abstractir/: actgraph_build.py  actgraph_sort.py  actions.py  actions_gen.py  actions_index.py  actions_program.py  closure.py  concept.py  consistency.py  creators.py  handle_factory.py  model_interpreter.py  p_files.py  p_ids.py  p_private.py  p_vmas.py  process_concept.py  pstree.py  resource_adapters.py  resource_concepts.py  resource_handles.py  resource_indexer.py
generator/crloader/: crconstants.py  crdata.py  loader.py
generator/generator/: command.py  gen.py
generator/pyutils/: cmdargs.py  dataclass.py  func.py  graph.py
generator/tests/: graph_test.py
generator/visualize/: actions_labels.py  core.py  gvboost.py  process_label.py  styles.py
interpreter/: CMakeLists.txt  get_all_pids.py  get_root_pid.py
interpreter/include/: log.h  parse_util.h  restorer.h
interpreter/include/command/: cmd_close_fd.h  cmd_create_thread.h  cmd_fini.h  cmd_fork_child.h  cmd_setsid.h  command.h
interpreter/lib/googletest/: CMakeLists.txt
interpreter/lib/json11/: CMakeLists.txt
interpreter/src/: main.cpp  parse.cpp  parse_util.cpp  pid_utils.cpp  restorer_node.cpp
interpreter/src/command/: cmd_close_fd.cpp  cmd_create_thread.cpp  cmd_duplicate_fd.cpp  cmd_fini.cpp  cmd_reg_open.cpp  commands.cpp
interpreter/test/: parse_test.cpp
restorer/: README.md  compile_proto.sh
restorer/criugen/: README.md  criugen.py  setup.py
restorer/generator/: command.py  commands_description.json  crdata.py  criugen.py  generator.py  loader.py  nodes.py  utils.py
restorer/include/: command.h
restorer/interpreter/: Makefile  build_dep.sh  interpreter.sublime-project  run.sh  run_and_dump.sh
restorer/src/: main.cpp
slides/: env.tex  project.tex
test_processes/: .gitignore
tools/: crtojson.sh  restore_and_dump.sh
(+197 files in other folders)
